fix: address code review findings in users-table removal POC
- UserIdentity.getName(): null-safe, returns "Unbekannter Nutzer" when both fields absent
- KeycloakProfileService: compare against current Keycloak email before setting emailChanged
- LocalDbIdentityAdapter.doUpsert: replace UPDATE+INSERT race with atomic INSERT ON CONFLICT
- LocalDbIdentityAdapter: add existsById(), log ERROR on stub identity fallback
- IdentityPort: add existsById() to interface
- FriendshipService: verify addressee exists via existsById() before persisting request
- AdminStatisticsService: fetch real user count from Keycloak instead of hardcoded -1
- AdminUserService/Resource: remove unimplemented lastSeenAfter/lastSeenBefore params
- V2.0.0 migration: drop ownerless groups before backfill, add NOT NULL to owner_oidcid
- V2.0.0 migration: delete orphaned settings rows, add NOT NULL to user_oidcid
- V2.0.0 migration: add NOT NULL to push_notification_log.user_oidcid

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>