@@ -60,10 +60,10 @@ public class FriendshipService {
             }
             // Resolve oidcId from email via Keycloak Admin API
             List<UserIdentity> found = identityPort.search(email, 1);
-            if (found.isEmpty() || !email.equalsIgnoreCase(found.get(0).email())) {
+            if (found.isEmpty() || !email.equalsIgnoreCase(found.getFirst().email())) {
                 throw new ResourceNotFoundException("Es wurde kein User mit der E-Mail Adresse " + email + " gefunden");
             }
-            addresseeOidcId = found.get(0).oidcId();
+            addresseeOidcId = found.getFirst().oidcId();
         }
         this.sendFriendshipRequest(requesterOidcId, addresseeOidcId);
     }
@@ -74,6 +74,10 @@ public class FriendshipService {
 
         if (requesterOidcId.equals(addresseeOidcId)) {
             throw new BadRequestException("Du kannst dir nicht selbst eine Freundschaftsanfrage senden");
+        }
+
+        if (!identityPort.existsById(addresseeOidcId)) {
+            throw new ResourceNotFoundException("Kein Benutzer mit der ID " + addresseeOidcId + " gefunden");
         }
 
         Optional<FriendshipRequest> existing = friendshipRepo.findRequest(requesterOidcId, addresseeOidcId);
